kube/media/sonarr/sonarr.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: media
  labels:
    app.kubernetes.io/name: sonarr
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: sonarr
  template:
    metadata:
      annotations:
        fluentbit.io/parser: "sonarr"
        diun.enable: "true"
      labels:
        app.kubernetes.io/name: sonarr
    spec:
      terminationGracePeriodSeconds: 15

      restartPolicy: Always
      volumes:
      - name: sonarr-config
        persistentVolumeClaim:
          claimName: sonarr-config
      - name: data
        nfs: # data folder is a mounted pre-existing NFS share, *not* a PV/PVC
          server: 192.168.1.200
          path: /volume1/Media
      containers:
      - env:
        - name: TZ
          value: America/New_York
        - name: PUID
          value: '333'
        - name: PGID
          value: '321'
        - name: UMASK
          value: '002'
        # https://hub.docker.com/r/linuxserver/sonarr/tags
        image: linuxserver/sonarr:4.0.19
        imagePullPolicy: IfNotPresent
        name: sonarr
        resources:
          requests:
            memory: 128Mi
          limits:
            memory: 768Mi
        ports:
        - containerPort: 8989
          name: http
          protocol: TCP
        stdin: true
        tty: true
        volumeMounts:
        - mountPath: /data
          name: data
        - mountPath: /config
          name: sonarr-config
