kube/media/sonarr/network.yml
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr-lan
  namespace: media
  annotations:
    metallb.io/loadBalancerIPs: "192.168.1.231"
  labels:
    app.kubernetes.io/name: sonarr
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app.kubernetes.io/name: sonarr
  ports:
  - name: http
    port: 8989
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: media
  labels:
    app.kubernetes.io/name: sonarr
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: sonarr
  ports:
  - name: http
    port: 8989
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
  labels:
    app.kubernetes.io/name: sonarr
spec:
  ingressClassName: nginx-internal
  tls:
  - hosts:
    - sonarr.matthew-stratton.me
    secretName: sonarr-tls
  rules:
  - host: sonarr.matthew-stratton.me
    http:
      paths:
      - backend:
          service:
            name: sonarr
            port:
              number: 8989
        path: /
        pathType: Prefix
